Simplify build configuration