@@ -110,7 +110,7 @@
     <japicmp.skip>true</japicmp.skip>
     <spotbugs.skip>false</spotbugs.skip>
     <animal.sniffer.skip>true</animal.sniffer.skip>
-    <surefire.argline></surefire.argline>
+    <surefire.argline>--add-opens java.base/java.lang=ALL-UNNAMED</surefire.argline>
     <!-- JaCoCo: Don't make code coverage worse than: -->
     <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
     <commons.jacoco.classRatio>0.98</commons.jacoco.classRatio>
@@ -321,19 +321,6 @@
     </plugins>
   </reporting>
   <profiles>
-    <profile>
-      <id>java16</id>
-      <!-- For testing with CGLIB on Java 16 and up. -->
-      <activation>
-        <jdk>[16,)</jdk>
-      </activation>
-      <properties>
-        <surefire.argline>
-          --illegal-access=permit
-          --add-opens java.base/java.lang=ALL-UNNAMED                     
-        </surefire.argline>
-      </properties>
-    </profile>
   </profiles>
   <developers>
     <developer>
